--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -51,3 +51,6 @@ DecisionTableEditor.DeleteOutputClause=Delete Output Clause
 DecisionTableEditor.InsertDecisionRuleAbove=Insert rule above
 DecisionTableEditor.InsertDecisionRuleBelow=Insert rule below
 DecisionTableEditor.DeleteDecisionRule=Delete rule
+DecisionNavigatorPresenter.DecisionNavigator=Decision Navigator
+DecisionNavigatorBaseItemFactory.NoName=- No Name -
+
