--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -184,7 +184,7 @@ ConstraintPlaceholderHelper.SampleNumber=Insert a number
 ConstraintPlaceholderHelper.SampleString=Insert a string
 ConstraintPlaceholderHelper.SampleDayTimeDuration=duration("PT10S")
 ConstraintPlaceholderHelper.SampleYearMonthDuration=Enter a value
-ConstraintPlaceholderHelper.SampleTime=time("16:00")
+ConstraintPlaceholderHelper.SampleTime=Insert a time
 ConstraintPlaceholderHelper.SampleDateTime=time("2019-02-28T17:00")
 ConstraintPlaceholderHelper.SampleDefault=Insert a value
 IncludedModelsPageView.Title=Included Models
@@ -212,3 +212,6 @@ DayTimeSelectorView.Days=days
 DayTimeSelectorView.Hours=hours
 DayTimeSelectorView.Minutes=minutes
 DayTimeSelectorView.Seconds=seconds
+TimeSelectorView.None=None
+TimeSelectorView.SelectTimeZone=Select timezone
+TimeSelectorView.SelectUTCOffset=Select UTC offset
